# index.js
@@ -2,6 +2,9 @@ require('dotenv').config();
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
+const authRouter = require('./routes/auth');
+const animalsRouter = require('./routes/animals');
+
 
 const app = express();
 const PORT = process.env.PORT || 5000;
@@ -11,8 +14,7 @@ const swaggerDocument = YAML.load('./swagger.yaml');
 app.use(express.json());
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-
-const animalsRouter = require('./routes/animals');
+app.use('/api/auth', authRouter);
 app.use('/api/animals', animalsRouter);
 
 app.get('/', (req, res) => {
